fix: todo description overflow

--- a/src/app/presentation/components/todo/todo.component.scss
+++ b/src/app/presentation/components/todo/todo.component.scss
@@ -29,6 +29,9 @@
 
   &__description {
     width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__date {
